--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
+{{> head }}
+<body>
+
+  <div class="container">
     {{{body}}}
-  </body>
+  </div>
+
+  {{> footer }}
+</body>
+
 </html>
