--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -2,3 +2,5 @@
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 <!-- Materialize JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<!-- Main JavaScript -->
+<script src="/javascripts/client.js"></script>
