--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -9,6 +9,7 @@
 
     <!-- Materialize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel='stylesheet' href="/stylesheets/style.css" />
 
 </head>
