--- a/views/add.hbs
+++ b/views/add.hbs
@@ -1,1 +1,25 @@
-<h1>Add</h1>
+<h1>Add new course</h1>
+
+<div class="row">
+    <form action="/add" method="POST" class="col s12">
+        <div class="row">
+            <div class="input-field col s12">
+                <input id="title" name="title" type="text" class="validate" required>
+                <label for="title">Course title</label>
+                <span class="helper-text" data-error="Enter title" data-success="right"></span>
+            </div>
+            <div class="input-field col s12">
+                <input id="price" name="price" type="number" class="validate" required min="1">
+                <label for="price">Price</label>
+                <span class="helper-text" data-error="Enter price" data-success="right"></span>
+            </div>
+            <div class="input-field col s12">
+                <input id="img" name="img" type="text" class="validate" required>
+                <label for="img">Image URL</label>
+                <span class="helper-text" data-error="Enter URL" data-success="right"></span>
+            </div>
+            <button class="btn waves-effect waves-light" type="submit" name="action">Add
+            </button>
+        </div>
+    </form>
+</div>
