--- a/views/add.hbs
+++ b/views/add.hbs
@@ -4,16 +4,19 @@
     <form action="/add" method="POST" class="col s12">
         <div class="row">
             <div class="input-field col s12">
+                <i class="fa fa-header prefix" aria-hidden="true"></i>
                 <input id="title" name="title" type="text" class="validate" required>
                 <label for="title">Course title</label>
                 <span class="helper-text" data-error="Enter title" data-success="right"></span>
             </div>
             <div class="input-field col s12">
+                <i class="fa fa-usd prefix" aria-hidden="true"></i>
                 <input id="price" name="price" type="number" class="validate" required min="1">
                 <label for="price">Price</label>
                 <span class="helper-text" data-error="Enter price" data-success="right"></span>
             </div>
             <div class="input-field col s12">
+                <i class="fa fa-picture-o prefix" aria-hidden="true"></i>
                 <input id="img" name="img" type="text" class="validate" required>
                 <label for="img">Image URL</label>
                 <span class="helper-text" data-error="Enter URL" data-success="right"></span>
