--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,11 @@
+/* ===== Navbar ===== */
+
 .nav-wrapper {
     padding: 0 2rem;
 }
+
+
+/* ===== Sidenav ===== */
 
 a.sidenav-trigger {
     color: #000;
@@ -11,4 +16,36 @@ a.sidenav-trigger {
     .sidenav-trigger {
         display: none;
     }
+}
+
+
+/* ===== Price ===== */
+
+.price {
+    font-size: 2rem;
+}
+
+.price.big {
+    font-size: 3rem;
+}
+
+
+/* ===== Course ===== */
+
+.course {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.course h1 {
+    margin-bottom: 2rem;
+    font-size: 2.5rem;
+    text-align: center;
+}
+
+.course img {
+    max-width: 600px;
+    height: auto;
 }
