--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,6 +19,16 @@ a.sidenav-trigger {
 }
 
 
+/* ===== Card ===== */
+
+.card-action {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+
 /* ===== Price ===== */
 
 .price {
