--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -17,6 +17,11 @@
             {{else}}
                 <li><a href="/add">Add course</a></li>
             {{/if}}  
+            {{#if isCard}}
+                <li class="active"><a href="/card">Cart</a></li>
+            {{else}}
+                <li><a href="/card">Cart</a></li>
+            {{/if}}
         </ul>
         <ul id="slide-out" class="sidenav">
             {{#if isHome}}
@@ -33,6 +38,11 @@
                 <li class="active"><a href="/add">Add course</a></li>
             {{else}}
                 <li><a href="/add">Add course</a></li>
+            {{/if}}
+            {{#if isCard}}
+                <li class="active"><a href="/card">Cart</a></li>
+            {{else}}
+                <li><a href="/card">Cart</a></li>
             {{/if}}
         </ul>
         <a href="#" data-target="slide-out" class="right sidenav-trigger"><i class="fa fa-bars" aria-hidden="true"></i></a>
