--- a/views/card.hbs
+++ b/views/card.hbs
@@ -1,1 +1,29 @@
 <h1>Кошик</h1>
+
+{{#if courses.length}}
+    
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th>Название</th>
+                <th>Количество</th>
+                <th>Действия</th>
+            </tr>
+        </thead>
+        <tbody>
+            {{#each courses}}
+            <tr>
+                <td>{{title}}</td>
+                <td>{{count}}</td>
+                <td>
+                    <button type="button" class="btn btn-small btn-default">Удалить</button>
+                </td>
+            </tr>
+            {{/each}}
+        </tbody>
+    </table>
+    <p><strong>Цена: </strong> <span class="price">{{price}}</span></p>
+    
+{{else}}
+    <p>Cart is empty/</p>
+{{/if}}
