--- a/views/course-edit.hbs
+++ b/views/course-edit.hbs
@@ -30,4 +30,11 @@
             </button>
         </div>
     </form>
+
+    
+    <form action="/courses/remove" method="POST">
+        <input type="hidden" name="id" value="{{course.id}}">
+        <button type="submit" class="btn red">Delete</button>
+    </form>
+    
 </div>
