added user model & one user

--- a/views/course-edit.hbs
+++ b/views/course-edit.hbs
@@ -1,4 +1,4 @@
-<h1>Add {{course.title}}</h1>
+<h1>Edit {{course.title}}</h1>
 
 <div class="row">
     <form action="/courses/edit" method="POST" class="col s12">
