--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,22 @@
+/* ===== Grid ===== */
+
+.container .row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.row .col.m6 {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media (max-width: 992px) {
+    .container .row {
+        flex-direction: column;
+    }
+}
+
+
 /* ===== Navbar ===== */
 
 .nav-wrapper {
