--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -1,9 +1,9 @@
 <h1>Courses</h1>
 
 {{#if courses.length}}
-{{#each courses}}
 <div class="row">
-    <div class="col s6 offset-s3">
+    {{#each courses}}
+    <div class="col s12 m6">
         <div class="card">
             <div class="card-image">
                 <img src="{{img}}" alt="{{title}}">
@@ -24,8 +24,8 @@
             </div>
         </div>
     </div>
+    {{/each}}
 </div>
-{{/each}}
 {{else}}
 <p>Courses not find</p>
 {{/if}}
