--- a/views/card.hbs
+++ b/views/card.hbs
@@ -23,6 +23,10 @@
         </table>
         <p><strong>Цена: </strong> <span class="price">{{price}}</span></p>
         
+        <form action="/orders" method="POST">
+            <button type="submit" class="btn blue darken-1">Сделать заказ</button>
+        </form>
+        
     {{else}}
         <p>Кошик пустий.</p>
     {{/if}}
