--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -22,6 +22,11 @@
             {{else}}
                 <li><a href="/card">Cart</a></li>
             {{/if}}
+            {{#if isOrder}}
+                <li class="active"><a href="/orders">Orders</a></li>
+            {{else}}
+                <li><a href="/orders">Orders</a></li>
+            {{/if}}
         </ul>
         <ul id="slide-out" class="sidenav">
             {{#if isHome}}
@@ -43,6 +48,11 @@
                 <li class="active"><a href="/card">Cart</a></li>
             {{else}}
                 <li><a href="/card">Cart</a></li>
+            {{/if}}
+            {{#if isOrder}}
+                <li class="active"><a href="/orders">Orders</a></li>
+            {{else}}
+                <li><a href="/orders">Orders</a></li>
             {{/if}}
         </ul>
         <a href="#" data-target="slide-out" class="right sidenav-trigger"><i class="fa fa-bars" aria-hidden="true"></i></a>
