--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -1,1 +1,31 @@
 <h1>Закази</h1>
+
+{{#if orders.length}}
+    
+    <div class="row">
+        {{#each orders}}
+            <div class="col s12 m6">
+                <div class="card">
+                    <div class="card-content">
+                        <span class="card-title"><small>Заказ: {{_id}}</small></span>
+                        <p class="date">Дата: {{date}}</p>
+                        <p><em>{{user.userId.name}}</em> ({{user.userId.email}})</p>
+
+                        <ol>
+                            {{#each courses}}
+                                <li>
+                                    {{course.title}} (x<strong>{{count}}</strong>)
+                                </li>
+                            {{/each}}
+                        </ol>
+                        <hr>
+                        <p>Цена: <span class="price">{{price}}</span></p>
+                    </div>
+                </div>
+            </div>
+        {{/each}}
+    </div>
+    
+{{else}}
+    <p>Заказов пока нет.</p>
+{{/if}}
