--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -27,6 +27,11 @@
             {{else}}
                 <li><a href="/orders">Orders</a></li>
             {{/if}}
+            {{#if isLogin}}
+                <li class="active"><a href="/auth/login#login">Log In</a></li>
+            {{else}}
+                <li><a href="/auth/login#login">Log In</a></li>
+            {{/if}}
         </ul>
         <ul id="slide-out" class="sidenav">
             {{#if isHome}}
@@ -53,6 +58,11 @@
                 <li class="active"><a href="/orders">Orders</a></li>
             {{else}}
                 <li><a href="/orders">Orders</a></li>
+            {{/if}}
+            {{#if isLogin}}
+                <li class="active"><a href="/auth/login#login">Log In</a></li>
+            {{else}}
+                <li><a href="/auth/login#login">Log In</a></li>
             {{/if}}
         </ul>
         <a href="#" data-target="slide-out" class="right sidenav-trigger"><i class="fa fa-bars" aria-hidden="true"></i></a>
