--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -8,7 +8,7 @@
         </div>
         <div class="col s12 login" id="login">
             <h2>Войти в магазин</h2>
-            <form action="/add" method="POST" class="col s12">
+            <form action="/auth/login" method="POST" class="col s12">
                 <div class="input-field col s12">
                     <i class="fa fa-at prefix" aria-hidden="true"></i>
                     <input id="email" name="email" type="email" class="validate" required>
@@ -27,7 +27,7 @@
         </div>
         <div class="col s12 register" id="register">
             <h2>Регистрация</h2>
-            <form action="/add" method="POST" class="col s12">
+            <form action="/auth/register" method="POST" class="col s12">
                 <div class="input-field col s12">
                     <i class="fa fa-at prefix" aria-hidden="true"></i>
                     <input id="remail" name="email" type="email" class="validate" required>
