--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -14,13 +14,15 @@
             </div>
             <div class="card-action">
                 <a href="/courses/{{id}}" target="_blank">Open course</a>
-                <a href="/courses/{{id}}/edit?allow=true">Edit course</a>
-                
-                <form action="/card/add" method="POST" >     
-                    <input type="hidden" name="id" value="{{id}}">    
-                    <button type="submit" class="btn btn-primary">Buy</button>
-                </form>
-                
+                {{#if @root.isAuth}}
+                    <a href="/courses/{{id}}/edit?allow=true">Edit course</a>
+                    <form action="/card/add" method="POST">
+                        <input type="hidden" name="id" value="{{id}}">
+                        <button type="submit" class="btn btn-primary">Buy</button>
+                    </form>
+                {{else}}
+
+                {{/if}}
             </div>
         </div>
     </div>
