user registration added

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -35,6 +35,12 @@
                     <span class="helper-text" data-error="Enter email" data-success="right"></span>
                 </div>
                 <div class="input-field col s12">
+                    <i class="fa fa-header prefix" aria-hidden="true"></i>
+                    <input id="name" name="name" type="text" class="validate" required>
+                    <label for="name">Name</label>
+                    <span class="helper-text" data-error="Enter your name" data-success="right"></span>
+                </div>
+                <div class="input-field col s12">
                     <i class="fa fa-key prefix" aria-hidden="true"></i>
                     <input id="rpassword" name="password" type="password" class="validate" required>
                     <label for="rprice">Password</label>
