--- a/views/add.hbs
+++ b/views/add.hbs
@@ -21,6 +21,7 @@
                 <label for="img">Image URL</label>
                 <span class="helper-text" data-error="Enter URL" data-success="right"></span>
             </div>
+            <input type="hidden" name="_csrf" value="{{csrf}}">
             <button class="btn waves-effect waves-light" type="submit" name="action">Add
             </button>
         </div>
