--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -21,6 +21,9 @@
                     <label for="price">Password</label>
                     <span class="helper-text" data-error="Enter password" data-success="right"></span>
                 </div>
+                
+                <input type="hidden" name="_csrf" value="{{csrf}}">
+                
                 <button class="btn waves-effect waves-light" type="submit">Войти
                 </button>
             </form>
@@ -52,6 +55,7 @@
                     <label for="confirm">Password again</label>
                     <span class="helper-text" data-error="Enter password again" data-success="right"></span>
                 </div>
+                <input type="hidden" name="_csrf" value="{{csrf}}">
                 <button class="btn waves-effect waves-light" type="submit">Зарегистрироваться
                 </button>
             </form>
