--- a/views/card.hbs
+++ b/views/card.hbs
@@ -15,7 +15,7 @@
                     <td>{{title}}</td>
                     <td>{{count}}</td>
                     <td>
-                        <button type="button" class="btn btn-small js-remove" data-id="{{id}}">Удалить</button>
+                        <button type="button" class="btn btn-small js-remove" data-id="{{id}}" data-csrf="{{@root.csrf}}">Удалить</button>
                     </td>
                 </tr>
                 {{/each}}
@@ -24,6 +24,7 @@
         <p><strong>Цена: </strong> <span class="price">{{price}}</span></p>
         
         <form action="/orders" method="POST">
+            <input type="hidden" name="_csrf" value="{{csrf}}">
             <button type="submit" class="btn blue darken-1">Сделать заказ</button>
         </form>
         
