--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -87,3 +87,15 @@ a.sidenav-trigger {
 .auth .register {
     padding-top: 1.5rem;
 }
+
+
+/* ===== Alert ===== */
+
+.alert {
+    padding: .5rem 1rem;
+    border-radius: 10px;
+    text-align: center;
+    margin-bottom: 1rem;
+    background-color: rgba(255, 0, 0, .3);
+    color: red;
+}
