--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -7,6 +7,9 @@
             </ul>
         </div>
         <div class="col s12 login" id="login">
+            {{#if loginError}}
+                <p class="alert">{{loginError}}</p>
+            {{/if}}
             <h2>Войти в магазин</h2>
             <form action="/auth/login" method="POST" class="col s12">
                 <div class="input-field col s12">
@@ -29,6 +32,9 @@
             </form>
         </div>
         <div class="col s12 register" id="register">
+            {{#if registerError}}
+                <p class="alert">{{registerError}}</p>
+            {{/if}}
             <h2>Регистрация</h2>
             <form action="/auth/register" method="POST" class="col s12">
                 <div class="input-field col s12">
