--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -1,4 +1,4 @@
-<h1>Закази</h1>
+<h1>Замовлення</h1>
 
 {{#if orders.length}}
     
@@ -7,7 +7,7 @@
             <div class="col s12 m6">
                 <div class="card">
                     <div class="card-content">
-                        <span class="card-title"><small>Заказ: {{_id}}</small></span>
+                        <span class="card-title"><small>Замовлення: {{_id}}</small></span>
                         <p class="date">Дата: {{date}}</p>
                         <p><em>{{user.userId.name}}</em> ({{user.userId.email}})</p>
 
